--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,13 @@
-.rules {
-  padding-left: 270px;
-  padding-right: 10px;
+body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+body.dark-mode {
+  background-color: #1a1919;
+  color: #999;
 }
 
-.clear {
-  padding-right: 80px;
-}
-
-.in {
-  padding-top: 100px;
-  margin-left: 200px;
-}
-
-.vs {
-  margin-top: 9px;
-}
-
-.equals {
-  margin-top: 7px;
-}
-
-.out {
-  padding-top: 50px;
-  padding-right: 170px;
-}
-
-.show {
-  margin-bottom: 3px;
+img {
+  cursor: pointer;
 }
